Fix spacing for email on socials page

--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,7 @@ section {
 }
 
 .email {
+    margin-top: 150px;
     margin-bottom: 100px;
 }
 
